Remove box shadow in index.html and fix height of first 1/3 section in professional.html page that was overflowing and hiding content in the title description section.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,6 @@
 .card-4:hover,
 .card-5:hover {
   cursor: pointer;
-  box-shadow: 0 0 3px green;
   translate: 0px -10px;
   transition: 500ms;
 }
